--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI="mongodb://localhost/research-activities-db"
+MONGODB_URI="mongodb://0.0.0.0:27017/research-activities-db"
 PORT=8888
 JWT_SECRET="top_secret"
 EMAIL_ADDRESS="portailmarocaindesrecherches@gmail.com"
